[add]ブロック崩しゲームの追加

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -67,7 +67,17 @@
                         <a href="/games/billiard/" class="game-button">
                             ビリヤードゲームをプレイする
                         </a>
-                    </li>
+                </li>
+
+                <li class="game-item">
+                    <strong>ブロック崩し</strong><br>
+                        使用技術: Unity / C# / WebGL<br>
+                        Unityで制作したブロック崩しゲームをブラウザ上でプレイ可能<br><br>
+
+                        <a href="/games/breakout/" class="game-button">
+                            ブロック崩しをプレイする
+                        </a>
+                </li>
             </ul>
         </div>
 
